# tex2math

./: .codegraphrc  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: math_parser_bench.rs
demo/: index.html
docs/: COMMANDS.md  MIGRATION-2.0.md  PERFORMANCE.md  RENDER_OPTIONS.md
src/: ast.rs  depth.rs  lib.rs  main.rs  registry.rs  sema.rs  symbols.rs  tests.rs  wasm.rs
src/parser/: atoms.rs  command.rs  environment.rs  mod.rs
src/parser/command/: frac.rs  misc.rs  mod.rs  scripts.rs  space.rs  style.rs
src/renderer/: mathml.rs  mod.rs  sink.rs
src/renderer/mathml/: basic.rs  decorated.rs  env.rs  layout.rs  mod.rs
src/renderer/mathml/iter/: environment.rs  mod.rs  scripts.rs  structure.rs  style.rs  tokens.rs
src/tests/: api_test.rs  boundary_test.rs  depth_test.rs  e2e_compatibility.rs  environments.rs  error_recovery.rs  limits_and_spacing.rs  mod.rs  parser_atoms.rs  rendering_mathml.rs  styling_and_scripts.rs  v2_features.rs
tests/: compatibility.rs  e2e_environments.rs  e2e_rendering.rs  error_recovery.rs  fixtures_runner.rs
tests/common/: mod.rs
tests/fixtures/: README.md
tests/fixtures/baseline/: cancel.mathml  cancel.tex  frac.mathml  greek.mathml  greek.tex  hat_sub.mathml  hat_sub.tex  left_right_frac.mathml  mathbf.mathml  mathbf.tex  pmatrix.mathml  pmatrix.tex  pythagoras.mathml  sqrt_root.mathml  sqrt_root.tex  sum_scripts.mathml
tests/fixtures/coverage/: arccot.mathml  arccot.tex  binom.contains  binom.tex  bmod.mathml  bmod.tex  dbinom.mathml  dbinom.tex  displaystyle_sum.mathml  displaystyle_sum.tex  lcm.mathml  lcm.tex  mathbin.mathml  mathbin.tex  mathop.mathml  mathop.tex  mathrel.mathml  mathrel.tex  mod_infix.mathml  mod_infix.tex  notin.mathml  notin.tex  operatorname_rank.mathml  operatorname_rank.tex  overset.mathml  overset.tex  phantom_xy.mathml  phantom_xy.tex  pmod.mathml  pmod.tex  pod.mathml  pod.tex  stackrel.mathml  stackrel.tex  sum_display.contains  sum_display.mathml  sum_display.tex  tag_inline.contains  tag_inline.tex  tbinom.mathml  (+3 more)
tests/fixtures/p1/: aligned.contains  aligned.mathml  aligned.tex  choose.contains  choose.tex  displaystyle.mathml  displaystyle.tex  gathered.mathml  gathered.tex  genfrac_binom.mathml  genfrac_binom.tex  genfrac_frac.mathml  genfrac_frac.tex  hskip.mathml  hskip.tex  kern.mathml  kern.tex  middle.contains  middle.mathml  middle.tex  mkern.tex  smallmatrix.mathml  smallmatrix.tex  split.mathml  split.tex  substack.mathml  substack.tex  tag.mathml  tag.tex  textstyle.mathml  textstyle.tex
